# digiductor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cache.rs  event.rs  main.rs  theme.rs
src/app/: mod.rs  state.rs
src/network/: api.rs  mod.rs
src/ui/: detail.rs  evolution.rs  list.rs  mod.rs  spinner.rs
