[package]
name = "digiductor"
version = "0.1.0"
edition = "2021"
description = "A cyberpunk terminal Digimon encyclopedia powered by the Digi-API"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
dirs = "5"
ratatui-image = { version = "8", default-features = false, features = ["crossterm"] }
image = { version = "0.25", default-features = false, features = ["png", "gif", "jpeg", "webp"] }

[profile.release]
opt-level = 3
lto = true
